<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="64dp"
    tools:context="org.teachervirus.ChooseInstallationActivity">


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_installation_path"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtMsg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/please_check_media"
            android:visibility="gone"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:visibility="gone"
            android:text="@string/retry" />
    </LinearLayout>

    <RadioButton
        android:id="@+id/radioDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/default_path" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtDefaultPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:text="@string/choose_installation_path"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioSelectPath"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:text="@string/select_path" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtSelectedPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="32dp"
                android:text="@string/choose_installation_path"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnChangePath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/change_path" />
    </LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnGO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:text="@string/go" />

</LinearLayout>
